--- a/resources/styles/header_style.css
+++ b/resources/styles/header_style.css
@@ -31,7 +31,7 @@ body {
 
 .hds-secondary-nav-track{
     display: block;
-    background-color: #1b1b1b;
+    background-color: #17171b;
     height: 63px;
     padding-top: 16px;
     padding-bottom: 16px;
