--- a/templates/research.html
+++ b/templates/research.html
@@ -107,9 +107,9 @@
                                 <input type="text" name="Date" class="Content-list-section" placeholder="Введите дату наблюдений">
                             </form>
                             <div style="margin-top: auto; padding-top: 24px;"> 
-                                <button class="btn-primary-danger" >
+                                <!-- <button class="btn-primary-danger" >
                                     Удалить из исследований
-                                </button>
+                                </button> -->
                                 <button type="submit" style="margin-right: 0px;">Сохранить</button>
                             </div>
                         </div>
@@ -133,13 +133,13 @@
         {{ else }}
             <div class="empty-research">
                 <p>Нет планет для исследования</p>
-                <a href="/planets" class="btn-primary" style="width: 240px; height: 38px;">Выбрать планеты</a>
+                <!-- <a href="/planets" class="btn-primary" style="width: 240px; height: 38px;">Выбрать планеты</a> -->
             </div>
         {{ end }}
-        <div style="width: 600px; margin: 0 auto; display: flex; justify-content: space-between;">
+        <!-- <div style="width: 600px; margin: 0 auto; display: flex; justify-content: space-between;">
             <button class="btn-primary">Исследовать</button>
             <button class="btn-primary">Удалить заявку</button>
-        </div>
+        </div> -->
 
     </main>
 </body>
