--- a/templates/index.html
+++ b/templates/index.html
@@ -59,13 +59,13 @@
                     <path d="M9 20H10.6655V23.5761H15.9138V20H17.5792V28.1766H15.9138V24.5H10.6655V28.1766H9V20Z" fill="white"/>
                 </svg>
             </a>
-        </nav>
+        <!-- </nav>
                 <div class="hds-secondary-nav-track">
             <nav class="breadcrumb-prim">
-            <!-- <a href="/" class="breadcrumb__link">Домой</a>
-            <span class="breadcrumb__separator">/</span> -->
+            <a href="/" class="breadcrumb__link">Домой</a>
+            <span class="breadcrumb__separator">/</span>
             <span class="breadcrumb__current">Экзопланеты</span>
-            </nav>
+            </nav> -->
         </div>
     </header>
 
