--- a/templates/research.html
+++ b/templates/research.html
@@ -60,15 +60,15 @@
                 </svg>
             </a>
         </nav>
-        <div class="hds-secondary-nav-track">
+        <!-- <div class="hds-secondary-nav-track">
             <nav class="breadcrumb-prim">
-                <!-- <a href="/" class="breadcrumb__link">Домой</a>
-                <span class="breadcrumb__separator">/</span> -->
+                <a href="/" class="breadcrumb__link">Домой</a>
+                <span class="breadcrumb__separator">/</span>
                 <a href="/planets" class="breadcrumb__link">Экзопланеты</a>
                 <span class="breadcrumb__separator">/</span>
                 <span class="breadcrumb__current">Исследование</span>
             </nav>
-        </div>
+        </div> -->
 
     </header>
 
@@ -110,7 +110,7 @@
                                 <!-- <button class="btn-primary-danger" >
                                     Удалить из исследований
                                 </button> -->
-                                <button type="submit" style="margin-right: 0px;">Сохранить</button>
+                                <!-- <button type="submit" style="margin-right: 0px;">Сохранить</button> -->
                             </div>
                         </div>
                         <div style=" flex-direction: column; align-items: center; justify-content: center; flex-grow: 1; text-align: center;">
