--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
 
         <a href="/research/{{ .researchId }}">
         <div class="icon-container">
-            <span class="counter-overlay root_icon_top">{{ .researchCount }}</span>
+            <span class="counter-overlay count root_icon_top">{{ .researchCount }}</span>
             <img src="/static/img/Telescope.png" alt="Telescope" class="root_icon_top">
 
         </div>
