--- a/templates/research.html
+++ b/templates/research.html
@@ -82,7 +82,7 @@
         </div>
 
         <div style="width: auto; margin-bottom: 30px;">
-            <input  type="text" name="Date" class="Content-list-section" placeholder="Введите дату наблюдений" style=" width: 500px; margin: auto; margin-top: 30px; display: block;">
+            <input  type="text" name="Date" class="Content-list-section" placeholder="Введите дату наблюдений" value="{{ .research.ResearchDate }}" style=" width: 500px; margin: auto; margin-top: 30px; display: block;">
         </div>
 
         <div style="display: flex; width: 1296px; align-items: center; height: 40px; margin: 0 auto; margin-bottom: 20px; 
@@ -95,43 +95,41 @@
         </div>
         {{ if .researchPlanets }}
             <ul class="grid-list">
-                {{ range .researchPlanets }}
-                <li>
-                    <div class="hds-content-item" style="align-items: center; padding: 5px; border: 0.7px solid #000; border-radius: 6px;">
-                        <a href="/planet/{{ .ID }}" class="hds-content-item-thumbnail"><img src= {{ .Image }} style="width: 429.33px; height: 241.68px; object-fit: contain; background: black;"> </a> 
+                {{ range $planet := .researchPlanets }}
+                    {{ range $param := $.research.PlanetsParametrs }}
+                        {{ if eq $param.PlanetId $planet.ID }}
+                        <li>
+                            <div class="hds-content-item" style="align-items: center; padding: 5px; border: 0.7px solid #000; border-radius: 6px;">
+                                <a href="/planet/{{ $planet.ID }}" class="hds-content-item-thumbnail">
+                                    <img src="{{ $planet.Image }}" style="width: 429.33px; height: 241.68px; object-fit: contain; background: black;">
+                                </a> 
 
-                        <a href="/planet/{{ .ID }}" class="hds-content-item-heading">
-                            <div class="hds-a11y-heading-22" style="width: 170px;">{{ .Name }}</div>
-                        </a>
+                                <a href="/planet/{{ $planet.ID }}" class="hds-content-item-heading">
+                                    <div class="hds-a11y-heading-22" style="width: 170px;">{{ $planet.Name }}</div>
+                                </a>
 
-                        <div style="font-size: 1.375rem; min-width: 130px;">
-                            <span style="white-space: nowrap; display: inline-block; width: 100%; ">
-                                {{ .StarRadius }} км
-                            </span>
-                        </div>
-                        
-                        <input type="text" name="Shine" class="Content-list-section" placeholder="Введите падение ~1%">
+                                <div style="font-size: 1.375rem; min-width: 130px;">
+                                    <span style="white-space: nowrap; display: inline-block; width: 100%;">
+                                        {{ $planet.StarRadius }} км
+                                    </span>
+                                </div>
+                                
+                                <input type="text" name="Shine" class="Content-list-section" 
+                                    placeholder="Введите падение ~1%" value="{{ $param.PlanetShine }}">
 
-                        <!-- <div style="margin-top: auto; padding-top: 24px;"> 
-                            <button class="btn-primary-danger" >
-                                Удалить из исследований
-                            </button>
-                            <button type="submit" style="margin-right: 0px;">Сохранить</button>
-                        </div> -->
-
-                        <div style="font-size: 23px; border: 1px solid #000; width: 128px; margin-left: 35px;
-                            border-radius: 8px; padding: 8px 12px; color: #000; text-align: center;background: #fff;">
-                            84400 км
-                        </div>
-
-                    </div>
-                </li>
+                                <div style="font-size: 23px; border: 1px solid #000; width: 128px; margin-left: 35px;
+                                    border-radius: 8px; padding: 8px 12px; color: #000; text-align: center; background: #fff;">
+                                    {{ $param.PlanetRadius }} км
+                                </div>
+                            </div>
+                        </li>
+                        {{ end }}
+                    {{ end }}
                 {{ end }}
             </ul>
         {{ else }}
             <div class="empty-research">
                 <p>Нет планет для исследования</p>
-                <!-- <a href="/planets" class="btn-primary" style="width: 240px; height: 38px;">Выбрать планеты</a> -->
             </div>
         {{ end }}
         <!-- <div style="width: 600px; margin: 0 auto; display: flex; justify-content: space-between;">
