--- a/templates/research.html
+++ b/templates/research.html
@@ -128,10 +128,12 @@
                 <p>Нет планет для исследования</p>
             </div>
         {{ end }}
-        <!-- <div style="width: 600px; margin: 0 auto; display: flex; justify-content: space-between;">
-            <button class="btn-primary">Исследовать</button>
-            <button class="btn-primary">Удалить заявку</button>
-        </div> -->
+        <div style="width: 600px; margin: 0 auto; display: flex; justify-content: space-between;">
+            <!-- <button class="btn-primary">Исследовать</button> -->
+            <form action="/research/{{ .research.ID }}/delete-research" style="width: 260px; margin-left: 0;" method="post">
+            <button class="btn-primary" >Удалить заявку</button>
+            </form>
+        </div>
 
     </main>
 </body>
