--- a/templates/research.html
+++ b/templates/research.html
@@ -99,7 +99,7 @@
                         <li>
                             <div class="hds-content-item" style="align-items: center; padding: 5px; border: 0.7px solid #000; border-radius: 6px;">
                                 <a href="/planet/{{ $planet.ID }}" class="hds-content-item-thumbnail">
-                                    <img src="{{ $planet.Image }}" style="width: 429.33px; height: 241.68px; object-fit: contain; background: black;">
+                                    <img src="http://localhost:9000/test/{{ $planet.Image }}" style="width: 429.33px; height: 241.68px; object-fit: contain; background: black;">
                                 </a> 
 
                                 <a href="/planet/{{ $planet.ID }}" class="hds-content-item-heading">
