--- a/templates/planets.html
+++ b/templates/planets.html
@@ -72,14 +72,19 @@
 
         
     <main>
-        <a href="/research/{{ .researchId }}">
-        <div class="icon-container">
-            <span class="counter-overlay count root_icon_top">{{ .researchCount }}</span>
-            <img src="/static/img/Telescope.png" alt="Telescope" class="root_icon_top">
+        {{ if eq .researchCount 0 }}
+            <img src = "/static/img/Telescope.png" alt title="Пусто" class = "root_icon">
+            </img>
+        {{ else }}
+            <a href="/research/{{ .researchId }}">
+                <div class="icon-container">
+                    <span class="counter-overlay count root_icon_top">{{ .researchCount }}</span>
+                    <img src="/static/img/Telescope.png" alt="Telescope" class="root_icon_top">
+                </div>
+            </a>
+        {{ end }}
 
-        </div>
-        </a>
-        <div class="d-grid gap-4 mb-3" style="margin-top: 30px;">
+        <div class="d-grid gap-4 mb-3" style="margin-top: 30px; margin-left: 130px;">
             <form action="/planets" method="GET" style="margin-bottom: 16px;">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M24 21.2851L17.6085 14.8941C18.6145 13.3754 19.1996 11.5576 19.1996 9.59999C19.1996 4.29743 14.9018 0 9.5998 0C4.29778 0 0 4.29839 0 9.60094C0 14.9016 4.29778 19.2009 9.5998 19.2009C11.5565 19.2009 13.3762 18.6141 14.8944 17.6091L21.2849 24L24 21.2851ZM2.71992 9.6019C2.71992 5.80223 5.8008 2.72352 9.59982 2.72352C13.3998 2.72352 16.4806 5.80223 16.4806 9.6019C16.4806 13.4016 13.3998 16.4822 9.59982 16.4822C5.8008 16.4822 2.71992 13.4016 2.71992 9.6019Z" fill="#58585B"/>
@@ -108,21 +113,14 @@
                             </div>
                         </div>
                         <form action="/planets/{{ .ID }}/add-to-research" style="width: 260px; margin-left: 0;" method="post">
-                            <button type="submit" class="btn-primary">Добавить к исследованию</button>
+                            <button type="submit" style="margin-top: 10px;">Добавить к исследованию</button>
                         </form>
                     </div>
                 </li>
             {{ end }}
         </ul>
         </div> 
-        {{ if eq .researchCount 0 }}
-                <img src = "/static/img/Telescope.png" alt title="Пусто" class = "root_icon">
-                </img>
-        {{ else }}
 
-
-
-        {{ end }}
     </main>
 </body>
 </html>
