--- a/templates/research.html
+++ b/templates/research.html
@@ -82,7 +82,7 @@
         </div>
 
         <div style="width: auto; margin-bottom: 30px;">
-            <input  type="text" name="Date" class="Content-list-section" placeholder="Введите дату наблюдений" value="{{ .research.DateResearch }}" style=" width: 500px; margin: auto; margin-top: 30px; display: block;">
+            <input  type="text" name="Date" class="Content-list-section" placeholder="Введите дату наблюдений" style=" width: 500px; margin: auto; margin-top: 30px; display: block;">
         </div>
 
         <div style="display: flex; width: 1296px; align-items: center; height: 40px; margin: 0 auto; margin-bottom: 20px; 
@@ -99,7 +99,7 @@
                         <li>
                             <div class="hds-content-item" style="align-items: center; padding: 5px; border: 0.7px solid #000; border-radius: 6px;">
                                 <a href="/planet/{{ $planet.ID }}" class="hds-content-item-thumbnail">
-                                    <img src="http://localhost:9000/test/{{ $planet.Image }}" style="width: 429.33px; height: 241.68px; object-fit: contain; background: black;">
+                                    <img src="http://localhost:9000/test/{{ $planet.Image }}" style="width: 390px; height: 241.68px; object-fit: contain; background: black;">
                                 </a> 
 
                                 <a href="/planet/{{ $planet.ID }}" class="hds-content-item-heading">
